--- a/project-1.css
+++ b/project-1.css
@@ -12,23 +12,37 @@ label {
 
 } */
 
+#content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#wrap {
+  display: flex;
+  justify-content: center;
+}
 .button {
   width: 200px;
   height: 30px;
-  position: relative;
-  left: 700px;
   background-color: rgb(97, 192, 236);
   border: none;
   border-radius: 4px;
+  margin: 3px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 15px;
 }
 
+.hello {
+  text-align: center;
+  left: 800px;
+}
 .button:hover {
   background-color: rgb(48, 137, 179);
 }
 .header {
-  position: relative;
-
-  left: 800px;
+  text-align: center;
 }
 .simbol {
   color: rgb(53, 204, 60);
@@ -39,10 +53,13 @@ label {
 }
 
 .content-submit {
-  position: relative;
-  top: 2px;
-  left: 750px;
   padding: 50px;
   background-color: rgb(97, 192, 236);
   width: 205px;
+}
+
+.list-button {
+    width: 100px;
+    height: 25;
+    margin: 1px;
 }
