--- a/project-1.css
+++ b/project-1.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(236, 241, 245);
+  background-color: #ecf1f5;
 }
 
 label {
@@ -27,7 +27,7 @@ label {
   width: 200px;
   height: 30px;
   background-color: rgb(97, 192, 236);
-  border: none;
+  border: solid gray 0.2px;
   border-radius: 4px;
   margin: 3px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -59,7 +59,10 @@ label {
 }
 
 .list-button {
-    width: 100px;
-    height: 25;
-    margin: 1px;
+  width: 100px;
+  height: 25;
+  margin: 1px;
+  background-color: rgb(97, 192, 236);
+  border: solid gray 0.2px;
+  border-radius: 4px;
 }
