--- a/project-1.css
+++ b/project-1.css
@@ -8,6 +8,19 @@ label {
   color: rgb(2, 20, 54);
 }
 
+ul {
+  align-self: flex-start;
+  padding: 1px;
+}
+li {
+  list-style-type: none;
+  font-size: 25px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+a {
+  text-decoration: none;
+}
+
 /* #content {
 
 } */
