--- a/project-1.css
+++ b/project-1.css
@@ -8,14 +8,49 @@ label {
   color: rgb(2, 20, 54);
 }
 
-ul {
-  align-self: flex-start;
+ul#ulToDo {
   padding: 1px;
 }
-li {
+
+span.taskLi {
+  font-size: 25px;
+}
+
+.done {
+  background-color: indianred;
+  border: solid 1px black;
+}
+.cheked {
+  height: 28px;
+  padding: 10px;
+  margin: -10px;
+  width: 30px;
+  border: solid 1px black;
+  border-radius: 4px;
+  text-align: center;
+}
+li.toDoLi {
   list-style-type: none;
   font-size: 25px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  padding: 10px;
+  background-color: rgb(125, 214, 199);
+  margin: 1px;
+  width: 600px;
+  height: 30px;
+}
+div.liDiv {
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+  font-size: 25px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  padding: 10px;
+  background-color: rgb(125, 214, 199);
+  margin: 1px;
+  width: 600px;
+  height: 30px;
+  border-radius: 4px;
 }
 a {
   text-decoration: none;
@@ -37,7 +72,7 @@ a {
   justify-content: center;
 }
 .button {
-  width: 200px;
+  width: 400px;
   height: 30px;
   background-color: rgb(97, 192, 236);
   border: solid gray 0.2px;
@@ -61,18 +96,19 @@ a {
   color: rgb(53, 204, 60);
 }
 .form-field {
-  width: 200px;
-  height: 25px;
+  width: 400px;
+  height: 30px;
+  font-size: 20px;
 }
 
 .content-submit {
-  padding: 50px;
+  padding: 30px 150px 30px 150px;
   background-color: rgb(97, 192, 236);
   width: 205px;
 }
 
 .list-button {
-  width: 100px;
+  width: 200px;
   height: 25;
   margin: 1px;
   background-color: rgb(97, 192, 236);
