--- a/project-1.css
+++ b/project-1.css
@@ -16,6 +16,11 @@ span.taskLi {
   font-size: 25px;
 }
 
+#headContainer {
+  display: flex;
+  flex-direction: row;
+}
+
 .done {
   background-color: indianred;
   border: solid 1px black;
@@ -71,6 +76,10 @@ a {
   display: flex;
   justify-content: center;
 }
+
+#userLogin {
+    margin-left: 400px;
+}
 .button {
   width: 400px;
   height: 30px;
@@ -90,8 +99,14 @@ a {
   background-color: rgb(48, 137, 179);
 }
 .header {
+  text-align:end;
+  width: 54%;
+}
+
+.discription {
   text-align: center;
 }
+
 .simbol {
   color: rgb(53, 204, 60);
 }
@@ -105,6 +120,12 @@ a {
   padding: 30px 150px 30px 150px;
   background-color: rgb(97, 192, 236);
   width: 205px;
+}
+
+.header-info {
+    padding-left: 50px;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    font-size: 20px;
 }
 
 .list-button {
